--- a/ProductCatalogService/ProductCatalogService.Api/appsettings.json
+++ b/ProductCatalogService/ProductCatalogService.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DatabaseConnectionString": "Host=localhost;Port=5432;Database=zeli-ecommerce;Username=postgres;Password=1212;"
+  }
 }
