refactor: adiciona validacao de campo nas entidades da domain e altera testes

--- a/ProductCatalogService/ProductCatalogService.Application/ProductCatalogService.Application.csproj
+++ b/ProductCatalogService/ProductCatalogService.Application/ProductCatalogService.Application.csproj
@@ -7,8 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Contracts\" />
+    <Folder Include="Profiles\" />
     <Folder Include="Services\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
   </ItemGroup>
 
 </Project>
