--- a/ProductCatalogService/ProductCatalogService.Application.Tests/ProductCatalogService.Application.Tests.csproj
+++ b/ProductCatalogService/ProductCatalogService.Application.Tests/ProductCatalogService.Application.Tests.csproj
@@ -12,21 +12,15 @@
   <ItemGroup>
     <PackageReference Include="AutoFixture" Version="4.18.1" />
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.0">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
     <PackageReference Include="Moq" Version="4.20.72" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Shouldly" Version="4.2.1" />
     <PackageReference Include="xunit" Version="2.5.3" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ProductCatalogService.Infra\ProductCatalogService.Infra.csproj" />
+    <ProjectReference Include="..\ProductCatalogService.Application\ProductCatalogService.Application.csproj" />
   </ItemGroup>
 
   <ItemGroup>
