--- a/ProductCatalogService/ProductCatalogService.Application/ProductCatalogService.Application.csproj
+++ b/ProductCatalogService/ProductCatalogService.Application/ProductCatalogService.Application.csproj
@@ -7,12 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Profiles\" />
-    <Folder Include="Services\" />
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="AutoMapper" Version="13.0.1" />
+    <ProjectReference Include="..\ProductCatalogService.Infra\ProductCatalogService.Infra.csproj" />
   </ItemGroup>
 
 </Project>
