Feat: Adiciona controller e todos os testes

--- a/AuthService/AuthService.Application.Tests/AuthService.Application.Tests.csproj
+++ b/AuthService/AuthService.Application.Tests/AuthService.Application.Tests.csproj
@@ -18,6 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\AuthService.Api\AuthService.Api.csproj" />
     <ProjectReference Include="..\AuthService.Application\AuthService.Application.csproj" />
   </ItemGroup>
 
