--- a/AuthService/AuthService.Api.Tests/AuthService.Api.Tests.csproj
+++ b/AuthService/AuthService.Api.Tests/AuthService.Api.Tests.csproj
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\AuthService.Api\AuthService.Api.csproj" />
+    <ProjectReference Include="..\AuthService.Application\AuthService.Application.csproj" />
   </ItemGroup>
 
   <ItemGroup>
