--- a/AuthService/AuthService.Api/appsettings.Development.json
+++ b/AuthService/AuthService.Api/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=AuthService;Username=postgres;Password=1212"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
