feat: termina green implementations da controller e testes

--- a/ProductCatalogService/ProductCatalogService.Api/ProductCatalogService.Api.csproj
+++ b/ProductCatalogService/ProductCatalogService.Api/ProductCatalogService.Api.csproj
@@ -19,11 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\ProductCatalogService.Infra\ProductCatalogService.Infra.csproj" />
+    <ProjectReference Include="..\ProductCatalogService.Application\ProductCatalogService.Application.csproj" />
   </ItemGroup>
 
 </Project>
